Server replication & protocol