@@ -25,23 +25,30 @@ import java.net.ConnectException;
 import java.net.InetSocketAddress;
 import java.net.MalformedURLException;
 import java.net.SocketException;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.ByteBuffer;
 import java.nio.channels.Channels;
 import java.nio.channels.SocketChannel;
+import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.EnumSet;
+import java.nio.file.PathMatcher;
+import java.nio.file.Paths;
+import java.util.OptionalInt;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 public class ServerController {
     private static final char HANDSHAKE_CHAR = 'C';
     private static final int MIN_PORT = 50000;
     private final ByteBuffer handshakeBuffer = ByteBuffer.wrap(new byte[]{(byte) HANDSHAKE_CHAR});
     private long uid;
+    private Path rootPath;
     private Path servicesPath;
+    private int cloneCount;
     private SocketChannel socketChannel = null;
     //<editor-fold desc="FXML Nodes">
     @FXML
@@ -55,13 +62,12 @@ public class ServerController {
     //</editor-fold>
     private Thread requestThread;
 
-    public void initialize() throws URISyntaxException {
+    public void initialize() {
         uid = UID.generateUID();
         labelUID.setText("UID: " + Long.toHexString(uid).toUpperCase());
 
-        servicesPath = Path.of(getClass().getProtectionDomain().getCodeSource().getLocation().toURI())
-                           .getParent()
-                           .resolve("services");
+        rootPath = Paths.get("").toAbsolutePath().getParent();
+        servicesPath = rootPath.resolve("services");
         //noinspection ResultOfMethodCallIgnored
         servicesPath.toFile().mkdir();
         linkPath.setText(servicesPath.toString());
@@ -135,13 +141,6 @@ public class ServerController {
     }
 
     private class RequestServer implements Runnable {
-        private static final EnumSet<ContentCode> SERVER_CONTENT_CODES = EnumSet.of(
-                ContentCode.ADD,
-                ContentCode.SUB,
-                ContentCode.MUL,
-                ContentCode.DIV,
-                ContentCode.INY
-        );
         private final ByteBuffer responseDataBuffer = ByteBuffer.allocate(Float.BYTES);
 
         @Override
@@ -161,48 +160,103 @@ public class ServerController {
                     final Message requestMessage = (Message) messageObjectInputStream.readObject();
                     // process only operations
                     ContentCode requestContentCode = requestMessage.contentCode();
-                    if (!SERVER_CONTENT_CODES.contains(requestContentCode))
-                        continue;
+                    switch (requestContentCode) {
+                        case INY -> {
+                            // service injection
+                            ByteArrayInputStream bodyArrayInputStream = new ByteArrayInputStream(requestMessage.body());
+                            ObjectInputStream bodyObjectInputStream = new ObjectInputStream(bodyArrayInputStream);
+                            ContentCode opCode = (ContentCode) bodyObjectInputStream.readObject();
+                            logAppend("Received service: " + opCode);
+                            OutputStream fileOutputStream = Files.newOutputStream(
+                                    servicesPath.resolve(opCode.name().toLowerCase() + ".jar")
+                            );
+                            fileOutputStream.write(bodyArrayInputStream.readAllBytes());
+                            fileOutputStream.close();
+                        }
+                        case CPY -> {
+                            if (requestMessage.serviceUID() != uid) {
+                                continue;
+                            }
+                            // clone protocol
+                            // send clone acknowledge to client
+                            Message ackMessage = MessageBuilder.from(requestMessage)
+                                                               .contentCode(ContentCode.CPACK)
+                                                               .serviceUID(uid)
+                                                               .body(null)
+                                                               .digestFingerprint(cloneCount++)
+                                                               .build();
+                            sendMessage(ackMessage);
+                            logAppend("Cloning...");
 
-                    if (requestContentCode == ContentCode.INY) {
-                        // service injection
-                        ByteArrayInputStream bodyArrayInputStream = new ByteArrayInputStream(requestMessage.body());
-                        ObjectInputStream bodyObjectInputStream = new ObjectInputStream(bodyArrayInputStream);
-                        ContentCode opCode = (ContentCode) bodyObjectInputStream.readObject();
-                        logAppend("Received service: " + opCode);
-                        OutputStream fileOutputStream = Files.newOutputStream(
-                                servicesPath.resolve(opCode.name().toLowerCase() + ".jar")
-                        );
-                        fileOutputStream.write(bodyArrayInputStream.readAllBytes());
-                        fileOutputStream.close();
-                    } else {
-                        // service request
-                        requestContentCodeName = requestContentCode.name();
+                            // get next server directory name
+                            Path parentPath = rootPath.getParent();
+                            String rootPathName = parentPath.relativize(rootPath).toString();
+                            Pattern postfixPattern = Pattern.compile("[0-9]+$");
+                            Matcher rootMatcher = postfixPattern.matcher(rootPathName);
+                            String dirBaseName;
+                            if (rootMatcher.find()) {
+                                dirBaseName = rootPathName.substring(0, rootMatcher.start());
+                            } else {
+                                dirBaseName = rootPathName;
+                            }
+                            PathMatcher pathMatcher = FileSystems.getDefault().getPathMatcher(String.format("regex:%s[0-9]*", dirBaseName));
 
-                        requestDataBuffer = ByteBuffer.wrap(requestMessage.body());
-                        float aVal = requestDataBuffer.getFloat();
-                        float bVal = requestDataBuffer.getFloat();
-                        logAppend(String.format("Request: %s,%.2f,%.2f", requestContentCodeName, aVal, bVal));
+                            OptionalInt maxInt;
+                            try (Stream<Path> pathWalk = Files.walk(parentPath, 1)) {
+                                maxInt = pathWalk
+                                        .filter(path -> pathMatcher.matches(path.getFileName()))
+                                        .mapMultiToInt((path, consumer) -> {
+                                            Matcher matcher = postfixPattern.matcher(path.toString());
+                                            if (matcher.find()) {
+                                                consumer.accept(Integer.parseInt(matcher.group()));
+                                            }
+                                        })
+                                        .max();
+                            }
+                            int dirCount = maxInt.orElse(0) + 1;
+                            Path target = parentPath.resolve(String.format("%s%02d", dirBaseName, dirCount));
+                            MessageBuilder copyMessageBuilder = MessageBuilder.from(ackMessage);
+                            try {
+                                Files.walkFileTree(rootPath, new TreeCopier(rootPath, target));
+                                ProcessBuilder pb = new ProcessBuilder(target.resolve(Path.of("bin", "serverFX.bat"))
+                                                                             .toString());
+                                pb.directory(target.resolve("bin").toFile());
+                                pb.start();
+                                logAppend("Created: " + target);
+                                copyMessageBuilder.contentCode(ContentCode.CPC);
+                            } catch (IOException e) {
+                                logAppend(String.format("Unable to create: %s: %s", target, e));
+                                copyMessageBuilder.contentCode(ContentCode.CPERR);
+                            }
+                            sendMessage(copyMessageBuilder.build());
+                        }
+                        case ADD, SUB, MUL, DIV -> {
+                            // service request
+                            requestContentCodeName = requestContentCode.name();
+                            requestDataBuffer = ByteBuffer.wrap(requestMessage.body());
+                            float aVal = requestDataBuffer.getFloat();
+                            float bVal = requestDataBuffer.getFloat();
+                            logAppend(String.format("Request: %s,%.2f,%.2f", requestContentCodeName, aVal, bVal));
+                            Method evalMethod = loadEvalMethod(requestContentCodeName);
+                            ContentCode ackCode = ContentCode.valueOf("ACK_" + requestContentCodeName);
+                            Message ackMessage = MessageBuilder.from(requestMessage)
+                                                               .contentCode(ackCode)
+                                                               .serviceUID(uid)
+                                                               .body(null)
+                                                               .build();
+                            sendMessage(ackMessage);
+                            float responseVal = (float) evalMethod.invoke(null, aVal, bVal);
+                            logAppend("Result: " + responseVal);
 
-                        Method evalMethod = loadEvalMethod(requestContentCodeName);
-                        ContentCode ackCode = ContentCode.valueOf("ACK_" + requestContentCodeName);
-                        Message ackMessage = MessageBuilder.from(requestMessage)
-                                                           .contentCode(ackCode)
-                                                           .serviceUID(uid)
-                                                           .body(null)
-                                                           .build();
-                        sendMessage(ackMessage);
-                        float responseVal = (float) evalMethod.invoke(null, aVal, bVal);
-                        logAppend("Result: " + responseVal);
-
-                        // response message
-                        responseDataBuffer.putFloat(responseVal);
-                        Message responseMessage = MessageBuilder.from(requestMessage)
-                                                                .contentCode(ContentCode.RES)
-                                                                .serviceUID(uid)
-                                                                .body(responseDataBuffer.array())
-                                                                .build();
-                        sendMessage(responseMessage);
+                            // response message
+                            responseDataBuffer.putFloat(responseVal);
+                            Message responseMessage = MessageBuilder.from(requestMessage)
+                                                                    .contentCode(ContentCode.RES)
+                                                                    .serviceUID(uid)
+                                                                    .body(responseDataBuffer.array())
+                                                                    .build();
+                            sendMessage(responseMessage);
+                        }
                     }
                 } catch (SocketException e) {
                     // connection closed from server
@@ -232,7 +286,9 @@ public class ServerController {
             try {
                 URL url = servicesPath.resolve(service.toLowerCase() + ".jar").toUri().toURL();
                 classLoader = URLClassLoader.newInstance(new URL[]{url});
-                String serviceClassName = "distributed.services." + service.substring(0, 1).toUpperCase() + service.substring(1).toLowerCase();
+                String serviceClassName = "distributed.services." + service.substring(0, 1)
+                                                                           .toUpperCase() + service.substring(1)
+                                                                                                   .toLowerCase();
                 Class<?> clazz = classLoader.loadClass(serviceClassName);
                 Class<?>[] partypes = new Class[]{float.class, float.class};
                 evalMethod = clazz.getMethod("eval", partypes);
